tests/paczka1/small_fuzzy/99839849.err
Error in line 2: ZLAfq S290 5,2
Error in line 11: eQaZZY A325 35,0
